[gd_scene load_steps=10 format=3 uid="uid://b3lpp1hok5p8n"]

[ext_resource type="Script" path="res://Scripts/Planet.gd" id="1_x5rrt"]
[ext_resource type="Texture2D" uid="uid://bp6yvn4hd8b8s" path="res://assets/1193334791.png" id="2_ejikb"]
[ext_resource type="Texture2D" uid="uid://cndef82jy6mce" path="res://assets/900644445.png" id="2_oa4vo"]

[sub_resource type="Animation" id="Animation_f1x1u"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1]
}

[sub_resource type="Animation" id="Animation_cit8j"]
resource_name = "rotation"
length = 25.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5, 5.5, 6, 6.5, 7, 7.5, 8, 8.5, 9, 9.5, 10, 10.5, 11, 11.5, 12, 12.5, 13, 13.5, 14, 14.5, 15, 15.5, 16, 16.5, 17, 17.5, 18, 18.5, 19, 19.5, 20, 20.5, 21, 21.5, 22, 22.5, 23, 23.5, 24, 24.5, 25),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 49]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_apcop"]
_data = {
"RESET": SubResource("Animation_f1x1u"),
"rotation": SubResource("Animation_cit8j")
}

[sub_resource type="Curve2D" id="Curve2D_img3p"]
bake_interval = 0.1
_data = {
"points": PackedVector2Array(-38.6988, -38.6988, 0, 0, -99.5353, 100.244, -40.3184, 40.2365, 40.3184, -40.2365, 101.038, 107.373, 52.1815, 33.4387, -52.1815, -33.4387, 100, -100, 33.4868, -40.8841, -33.4868, 40.8841, -100, -100, -57.094, -69.3851, 0, 0, -100, 100)
}
point_count = 5

[sub_resource type="CircleShape2D" id="CircleShape2D_st3o2"]
radius = 50.5025

[sub_resource type="CircleShape2D" id="CircleShape2D_s2xdj"]
radius = 80.6877

[node name="Planet" type="Node2D"]
position = Vector2(200, 200)
scale = Vector2(2, 2)
script = ExtResource("1_x5rrt")
imagen = ExtResource("2_oa4vo")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -2)
texture = ExtResource("2_ejikb")
hframes = 50
frame = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "rotation"
libraries = {
"": SubResource("AnimationLibrary_apcop")
}

[node name="Orbit1" type="Path2D" parent="."]
scale = Vector2(0.663081, 0.668368)
curve = SubResource("Curve2D_img3p")

[node name="PathFollow2D" type="PathFollow2D" parent="Orbit1"]
position = Vector2(-99.5353, 100.244)
rotation = 0.0355281
cubic_interp = false

[node name="Orbit2" type="Path2D" parent="."]
curve = SubResource("Curve2D_img3p")

[node name="PathFollow2D" type="PathFollow2D" parent="Orbit2"]
position = Vector2(-99.5353, 100.244)
rotation = 0.0355281
cubic_interp = false

[node name="Orbit3" type="Path2D" parent="."]
scale = Vector2(1.41375, 1.38519)
curve = SubResource("Curve2D_img3p")

[node name="PathFollow2D" type="PathFollow2D" parent="Orbit3"]
position = Vector2(-99.5353, 100.244)
rotation = 0.0355281
cubic_interp = false

[node name="GrabPlanet" type="StaticBody2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="GrabPlanet"]
position = Vector2(1.5, -2)
shape = SubResource("CircleShape2D_st3o2")

[node name="EntryToPlanet" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EntryToPlanet"]
shape = SubResource("CircleShape2D_s2xdj")
